--- a/consumer.css
+++ b/consumer.css
@@ -10,17 +10,19 @@ body {
     visibility: hidden;
 }
 .content #shameless_product_placement_logo {
-    height: 100px;
-    float: right;
-    margin-top: 35px;
-    margin-right: 35px;
+    position: absolute;
+    height: 15%;
+    width: auto;
+    top: 3%;
+    right: 3%;
 }
 .content #shameless_product_placement_logo:hover {
     opacity: 90%;
     transition: opacity 250ms linear;
 }
 .content #shih_tzu {
-    height: 10px;
+    height: 1.2%;
+    width: auto;
     opacity: 0;
     position: absolute;
     left: 50%;
@@ -42,24 +44,30 @@ body {
 }
 .content #shih_zoo_logo {
     position: absolute;
+    height: 38%;    
+    width: auto;
     left: 4%;
     bottom: 20%;
 }
-.content #shih_zoo_download {
+.content #download_button_apple {
     position: absolute;
-    bottom: 10%;
-    left: 10%;
-    color: #3d4045;
-    background-color: white;
-    border-color: #3d4045;
-    border-radius: 10px;
-    border-style: solid;
-    font-weight: bolder;
-    text-align: center;
-    font-size: 15px;
-    padding: 15px 15px;
+    height: 10%;
+    width: auto;
+    bottom: 8%;
+    left: 5%;
 }
-.content #shih_zoo_download:hover {
+.content #download_button_apple:hover {
+    opacity: 90%;
+    transition: opacity 250ms linear;
+}
+.content #les_dudes_coming_soon {
+    position: absolute;
+    height: 38%;
+    width: auto;
+    right: 4%;
+    bottom: 20%;
+}
+.content #les_dudes_coming_soon:hover {
     opacity: 90%;
     transition: opacity 250ms linear;
 }
