--- a/sponsor.css
+++ b/sponsor.css
@@ -1,7 +1,131 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
-    background-image: url('https://t4.ftcdn.net/jpg/05/49/86/39/360_F_549863991_6yPKI08MG7JiZX83tMHlhDtd6XLFAMce.jpg');
+    background-image: url('assets/sponsor_background.gif');
     width: 100%;
     height: 100%;
+    min-height: 100%;
     margin: 0;
     padding: 0;
+}
+html {
+    min-height: 100%;
+}
+.unscrollable {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.content.close {
+    transition: all 0.4s ease-in;
+    visibility: hidden;
+}
+.content #shameless_product_placement_logo {
+    width: 55%;
+    height: auto;
+    position: absolute;
+    left: 30%;
+    top: 25%;
+}
+.content #sponsor_buttons {
+    position: absolute;
+    left: 3%;
+    top: 70%;
+}
+.content #sponsor_buy_button {
+    height: 60px;
+    background: #5E5DF0;
+    border-radius: 999px;
+    box-shadow: #5E5DF0 0 10px 20px -10px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-size: 30px;
+    line-height: 24px;
+    opacity: 1;
+    outline: 0 solid transparent;
+    padding: 8px 18px;
+    width: fit-content;
+    word-break: break-word;
+    border: 0;
+    margin-left: 20px;
+    font-family:'Fira Sans';
+}
+.content #sponsor_buy_button:hover {
+    background:#4747b7;
+}
+.content #sponsor_contact_button {
+    height: 60px;
+    border-color: black;
+    background-color: transparent;
+    border-radius: 999px;
+    box-sizing: border-box;
+    color: black;
+    cursor: pointer;
+    font-size: 30px;
+    line-height: 24px;
+    opacity: 1;
+    outline: 0 solid transparent;
+    padding: 8px 18px;
+    width: fit-content;
+    word-break: break-word;
+    border-style: solid;
+    margin-left: 20px;
+    font-family:'Fira Sans';
+}
+.content #sponsor_contact_button:hover {
+    background-color: black;
+    color: white;
+}
+.content #sponsor_overlay {
+    position: absolute;
+    top: 80%;
+    width: 100%;
+    height: 7500px;
+    background-image: linear-gradient(transparent, white 3%);
+}
+.content #sponsor_information {
+    margin-top: 230px;
+    margin-left: 50px;
+    margin-right: 20px;
+}
+.content #sponsor_title {
+    text-align: center;
+    font-size: 100px;
+    font-family: 'EB Garamond';
+}
+.content .sponsor_information_part_1 {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 60% 40%;
+    column-gap: 5px;
+}
+.content #sponsor_details_part_1 {
+    font-size: 24px;
+    margin-right: 20px;
+    font-family: 'EB Garamond';
+    display: inline-block;
+}
+.content #sponsor_example_1 {
+    display: inline-block;
+    width: 100%;
+}
+.content .sponsor_information_part_2 {
+    margin-top: 20px;
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 40% 60%;
+    column-gap: 5px;
+}
+.content #sponsor_details_part_2 {
+    font-size: 24px;
+    margin-left: 10px;
+    margin-right: 20px;
+    font-family: 'EB Garamond';
+    display: inline-block;
+}
+.content #sponsor_example_2 {
+    display: inline-block;
+    width: 100%;
 }
