--- a/menu.css
+++ b/menu.css
@@ -33,7 +33,7 @@
     color: white;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 2000px;
     visibility: hidden;
     overflow: hidden;
     background-size: cover;
