--- a/investor.css
+++ b/investor.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 body {
     background-image: url('assets/investor_background.gif');
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
     margin: 0;
     padding: 0;
 }
 html {
-    min-height: 100%;
+    max-height: 2000px;
 }
 .unscrollable {
     width: 100%;
@@ -35,42 +33,39 @@ html {
 }
 .content #investor_contact_button {
     height: 60px;
-    background: #5E5DF0;
+    border-color: black;
+    background-color: transparent;
     border-radius: 999px;
-    box-shadow: #5E5DF0 0 10px 20px -10px;
     box-sizing: border-box;
-    color: #FFFFFF;
+    color: black;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 3vw;
     line-height: 24px;
     opacity: 1;
     outline: 0 solid transparent;
     padding: 8px 18px;
-    width: fit-content;
     word-break: break-word;
-    border: 0;
+    border-style: solid;
     margin-left: 20px;
     font-family:'Fira Sans';
     text-decoration: none;
 }
 .content #investor_contact_button:hover {
-    background:#4747b7;
+    background-color: black;
+    color: white;
 }
 .content #investor_overlay {
     position: absolute;
     top: 80%;
     width: 100%;
-    height: 7500px;
-    background-image: linear-gradient(transparent, white 3%);
+    background-image: linear-gradient(transparent, white 10%);
 }
 .content #investor_information {
-    margin-top: 230px;
-    margin-left: 50px;
-    margin-right: 20px;
+    margin-top: 20%;
 }
 .content #investor_title {
     text-align: center;
-    font-size: 100px;
+    font-size: 10vw;
     font-family: 'EB Garamond';
 }
 .content .investor_information_part_1 {
@@ -78,9 +73,12 @@ html {
     align-items: center; 
     grid-template-columns: 40% 60%;
     column-gap: 5px;
+    margin-left: 2%;
+    margin-right: 2%;
+
 }
 .content #investor_details_part_1 {
-    font-size: 24px;
+    font-size: 1.5vw;
     margin-right: 20px;
     margin-left: 20px;
     font-family: 'EB Garamond';
@@ -96,9 +94,12 @@ html {
     align-items: center; 
     grid-template-columns: 60% 40%;
     column-gap: 5px;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 .content #investor_details_part_2 {
-    font-size: 24px;
+    font-size: 1.5vw;
+    margin-left: 10px;
     margin-right: 20px;
     font-family: 'EB Garamond';
     display: inline-block;
@@ -106,4 +107,129 @@ html {
 .content #investor_example_2 {
     display: inline-block;
     width: 100%;
+}
+.content #investor_contact_information {
+    margin-top: 10vh;
+    grid-template-columns: 30% 70%;
+    display: grid;
+    height: 260vh;
+}
+.content #contact_section {
+    display: inline-block;
+    background-image: linear-gradient(black, #7b58d1 70%);
+    font-family: 'Oswald';
+    text-align: center;
+    color: white;
+}
+.content #contact_title {
+    font-size: 5vw;
+}
+.content #contact_secondary_title {
+    font-size: 3vw;
+}
+.content #contact_information {
+    font-size: 1.5vw;
+    text-align: left;
+    margin-left: 5%;
+}
+.content #contact_form {
+    display: inline;
+    background-image: linear-gradient(gray, #7b58d1 70%);
+    text-align: center;
+    font-family: 'Oswald';
+}
+.content .contact_form_name {
+    width: 45%;
+    display: inline;
+    margin-top: 40px;
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: center;
+    padding: 10px 0;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+    color: black;
+    font-size: 14px;
+    outline: none;
+    transition: border-color .2s;
+}
+.content .contact_form_name::placeholder {
+    color: black;
+}
+.content #contact_form_email {
+    width: 92.5%;
+    display: inline;
+    margin-top: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: center;
+    padding: 10px 0;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+    color: black;
+    font-size: 14px;
+    outline: none;
+    transition: border-color .2s;
+}
+.content #contact_form_email::placeholder {
+    color: black;
+}
+.content #contact_form_company {
+    width: 92.5%;
+    display: inline;
+    margin-top: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: center;
+    padding: 10px 0;
+    background: none;
+    border: none;
+    border-bottom: 2px solid black;
+    color: black;
+    font-size: 14px;
+    outline: none;
+    transition: border-color .2s;
+}
+.content #contact_form_company::placeholder {
+    color: black;
+}
+.content #contact_form_message {
+    width: 92.5%;
+    height: 100%;
+    display: inline;
+    padding: 10px 10px;
+    background: none;
+    border: 2px solid black;
+    color: black;
+    font-size: 14px;
+    outline: none;
+    transition: border-color .2s;
+    margin-top: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 3%;
+    resize: none;
+}
+.content #contact_form_message::placeholder {
+    color: black;
+}
+.content #contact_form_submit_button {
+    width: 92.5%;
+    display: inline;
+    padding: 10px 10px;
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+    font-size: 14px;
+    outline: none;
+    transition: border-color .2s;
+    margin-top: 20px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 3%;
+}
+.content #contact_form_submit_button:hover {
+    background-color: gray;
 }
