--- a/investor.css
+++ b/investor.css
@@ -172,23 +172,23 @@ html {
     font-family: 'Fira Sans';
 }
 .content #investor_contact_information {
-    margin-top: 10vh;
     grid-template-columns: 30% 70%;
     display: grid;
     height: 260vh;
 }
 .content #contact_section {
     display: inline-block;
-    background-image: linear-gradient(black, #7b58d1 70%);
+    background-image: linear-gradient(transparent 0%, black 10%, #7335b1 100%);
     font-family: 'Oswald';
-    text-align: center;
     color: white;
 }
 .content #contact_title {
     font-size: 5vw;
+    text-align: center;
 }
 .content #contact_secondary_title {
     font-size: 3vw;
+    text-align: center;
 }
 .content #contact_information {
     font-size: 1.5vw;
@@ -200,13 +200,14 @@ html {
     color: white;
     margin-left: 5%;
     display: inline;
+    text-align: left;
 }
 .content .icons:hover {
     color: gray;
 }
 .content #contact_form {
     display: inline;
-    background-image: linear-gradient(gray, #7b58d1 70%);
+    background-image: linear-gradient(transparent 0%, black 10%, #7335b1 100%);
     text-align: center;
     font-family: 'Oswald';
 }
@@ -220,14 +221,14 @@ html {
     padding: 10px 0;
     background: none;
     border: none;
-    border-bottom: 2px solid black;
-    color: black;
+    border-bottom: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
 }
 .content .contact_form_name::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_email {
     width: 92.5%;
@@ -239,14 +240,14 @@ html {
     padding: 10px 0;
     background: none;
     border: none;
-    border-bottom: 2px solid black;
-    color: black;
+    border-bottom: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
 }
 .content #contact_form_email::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_company {
     width: 92.5%;
@@ -258,14 +259,14 @@ html {
     padding: 10px 0;
     background: none;
     border: none;
-    border-bottom: 2px solid black;
-    color: black;
+    border-bottom: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
 }
 .content #contact_form_company::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_message {
     width: 92.5%;
@@ -273,8 +274,8 @@ html {
     display: inline;
     padding: 10px 10px;
     background: none;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
@@ -285,7 +286,7 @@ html {
     resize: none;
 }
 .content #contact_form_message::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_submit_button {
     width: 92.5%;
