--- a/sponsor.css
+++ b/sponsor.css
@@ -140,16 +140,17 @@ html {
 }
 .content #contact_section {
     display: inline-block;
-    background-image: linear-gradient(black, #7b58d1 70%);
+    background-image: linear-gradient(black, #44ddf1 60%);
     font-family: 'Oswald';
-    text-align: center;
     color: white;
 }
 .content #contact_title {
     font-size: 5vw;
+    text-align: center;
 }
 .content #contact_secondary_title {
     font-size: 3vw;
+    text-align: center;
 }
 .content #contact_information {
     font-size: 1.5vw;
@@ -161,13 +162,14 @@ html {
     color: white;
     margin-left: 5%;
     display: inline;
+    text-align: left;
 }
 .content .icons:hover {
     color: gray;
 }
 .content #contact_form {
     display: inline;
-    background-image: linear-gradient(gray, #7b58d1 70%);
+    background-image: linear-gradient(black, #44ddf1 60%);
     text-align: center;
     font-family: 'Oswald';
 }
@@ -181,14 +183,14 @@ html {
     padding: 10px 0;
     background: none;
     border: none;
-    border-bottom: 2px solid black;
-    color: black;
+    border-bottom: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
 }
 .content .contact_form_name::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_email {
     width: 92.5%;
@@ -200,14 +202,14 @@ html {
     padding: 10px 0;
     background: none;
     border: none;
-    border-bottom: 2px solid black;
-    color: black;
+    border-bottom: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
 }
 .content #contact_form_email::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_company {
     width: 92.5%;
@@ -219,14 +221,14 @@ html {
     padding: 10px 0;
     background: none;
     border: none;
-    border-bottom: 2px solid black;
-    color: black;
+    border-bottom: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
 }
 .content #contact_form_company::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_message {
     width: 92.5%;
@@ -234,8 +236,8 @@ html {
     display: inline;
     padding: 10px 10px;
     background: none;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid white;
+    color: white;
     font-size: 14px;
     outline: none;
     transition: border-color .2s;
@@ -246,7 +248,7 @@ html {
     resize: none;
 }
 .content #contact_form_message::placeholder {
-    color: black;
+    color: white;
 }
 .content #contact_form_submit_button {
     width: 92.5%;
