--- a/home.css
+++ b/home.css
@@ -15,8 +15,9 @@ body {
     overflow: visible;
 }
 #background_video {
-    width: 100%;
-    height: 100%;
+    min-height: 260vh;
+    max-width: 100%;
+    object-fit: fill;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
@@ -24,7 +25,6 @@ body {
     right: 0;
     bottom: 0;
     z-index: -1;
-    opacity: 100%;
 }
 .unscrollable {
     width: 100%;
@@ -47,10 +47,10 @@ body {
 }
 .content #home_title {
     color: white;
-    font-family: 'MuseoModerno';
+    font-family: 'Fira Sans';
     position: absolute;
     top: 5%;
-    left: 48%;
+    left: 50%;
     font-size: 1vw;
 }
 .content #home_text {
@@ -61,14 +61,15 @@ body {
     left: 2%;
     font-size: 5vw;
 }
-.content .scroll {
-    position: absolute;
-    top: 90%;
-    left: 46%;
+.content #scroll {
     display: inline-block;
-    font-family: 'Fira Sans';
-    color: black;
     text-decoration: none;
+}
+.content #down_arrow {
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    width: 2%;
 }
 .content .scrollable_area #story_title {
     color: white;
