Updated logo and formatting

--- a/consumer.css
+++ b/consumer.css
@@ -53,7 +53,15 @@ body {
     height: auto;    
     width: 20%;
     left: 4%;
-    bottom: 20%;
+    bottom: 22%;
+}
+.content #shih_zoo_logo:hover {
+    transform: translate(0px, -10px);
+    transition: 250ms linear;
+}
+.content #shih_zoo_logo:not(:hover) {
+    transform: translate(0px, 10px);
+    transition: 250ms linear;
 }
 .content #download_button_apple {
     position: absolute;
