--- a/careers.css
+++ b/careers.css
@@ -7,8 +7,140 @@ body, html {
     height: 200vh;
 }
 body {
-    background-image: url('assets/');
+    background-color: black;
 }
 .content {
     overflow: visible;
+}
+#background_video {
+    min-height: 100vh;
+    max-width: 100%;
+    object-fit: fill;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    filter: brightness(50%);
+}
+.unscrollable {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.content.close {
+    transition: all 0.4s ease-in;
+    visibility: hidden;
+}
+.content #shameless_product_placement_logo {
+    position: absolute;
+    width: 15%;
+    right: 2.5%;
+    top: 2.5%;
+}
+.content #careers_text {
+    color: white;
+    font-family: 'MuseoModerno';
+    position: absolute;
+    top: 30%;
+    left: 2%;
+    font-size: 5.5vw;
+}
+.content #careers_subtext {
+    color: white;
+    font-family: 'MuseoModerno';
+    position: absolute;
+    top: 90%;
+    left: 2%;
+    font-size: 3vw;
+}
+.content .careers_buttons {
+    margin-left: 10%;
+    margin-top: 3%;
+    border: none;
+    background-color: transparent;
+    color: white;
+    font-size: 4vw;
+    font-family: 'MuseoModerno';
+    transition: 250ms linear;
+}
+.content .careers_buttons:hover {
+    color: gray;
+    transition: 250ms linear;
+}
+.content .careers_extensions {
+    background-color: white;
+}
+.content .careers_descriptions {
+    background-color: white;
+    width: 100%;
+    transition: 250ms linear;
+    display: grid;
+    grid-template-columns: 64% 35%;
+    column-gap: 1%;
+}
+.content .careers_text {
+    padding: 2%;
+}
+.content .careers_main_text {
+    font-family: 'Fira Sans';
+    font-size: 3.4vw;
+    color: black;
+
+}
+.content .careers_skills_titles {
+    font-family: 'Fira Sans';
+    font-size: 2vw;
+    color: black;
+}
+.content .careers_skills_list {
+    font-family: 'Fira Sans';
+    font-size: 1.2vw;
+    color: gray;
+}
+.content .careers_apply_buttons {
+    width: 10vw;
+    border-radius: 999px;
+    box-sizing: border-box;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    font-size: 1vw;
+    opacity: 1;
+    outline: 0 solid transparent;
+    padding: 8px 18px;
+    border-style: solid;
+    border-color: white;
+    font-family:'Fira Sans';
+    text-decoration: none;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    transition: 250ms linear;
+}
+.content .careers_apply_buttons:hover {
+    color: gray;
+    transition: 250ms linear;
+}
+.content .careers_images {
+    width: 100%;
+    padding: 4%;
+    margin-bottom: 4%;
+}
+.content #careers_why_title {
+    margin-top: 4%;
+    color: white;
+    font-family: 'MuseoModerno';
+    font-size: 5.5vw;
+    text-align: center;
+}
+.content #careers_why_text {
+    font-size: 2vw;
+    font-family: 'Fira Sans';
+    color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-bottom: 200%;
+    text-align: center;
 }
