--- a/contact.css
+++ b/contact.css
@@ -40,6 +40,7 @@ html{
     margin-left: 5%;
     display: inline;
     text-align: left;
+    transition: 250ms linear;
 }
 .content .icons:hover {
     color: gray;
@@ -142,7 +143,9 @@ html{
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 3%;
+    transition: 250ms linear;
 }
 .content #contact_form_submit_button:hover {
     background-color: gray;
+    transition: 250ms linear;
 }
