--- a/menu.css
+++ b/menu.css
@@ -3,8 +3,8 @@
 .menu_button {
     position: absolute;
     z-index: 3;
-    left: 35px;
-    top: 35px;
+    left: 2%;
+    top: 4%;
     cursor: pointer;
     transition: all 0.5s ease-out;
 }
@@ -27,13 +27,12 @@
 .menu_button.close .button_line:nth-child(3) {
     transform: rotate(-45deg) translate(7px, -6px);
 }
-
 .menu {
     position: absolute;
     color: white;
     top: 0;
     width: 100%;
-    height: 2000px;
+    height: 200vh;
     visibility: hidden;
     overflow: hidden;
     background-size: cover;
@@ -45,16 +44,16 @@
 }
 .menu ul {
     position: absolute;
-    top: -13vh;
-    left: 10%;
+    top: 10%;
+    left: -30%;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
 }
 .menu.open ul {
-    transition: all 1s ease-in;
-    transform: translate(0,100px);
+    transition: all 1.5s ease-in;
+    transform: translate(40vw, 0);
 }
 .menu li {
     float: left;
@@ -62,16 +61,14 @@
 .menu li a {
     display: block;
     color: white;
+    padding-top: 3%;
     text-align: center;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 30px;
-    font-size: 2vw;
+    font-size: 5vh;
     text-decoration: none;
     font-family: 'Quicksand', sans-serif;
-    transition: color 250ms linear;
+    transition: 250ms linear;
 }
 .menu li a:hover {
-    color: gray;
-    transition: color 250ms linear;
+    filter: brightness(75%);
+    transition: 250ms linear;
 }
