--- a/consumer.css
+++ b/consumer.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     background-image: url('assets/consumer_background.jpg');
     width: 100%;
@@ -72,17 +73,35 @@ body {
     transform: translate(0px, -10px);
     transition: 250ms linear;
 }
-.content #download_button_apple {
+.content #shih_zoo_download_button {
+    height: 60px;
+    transition: 250ms;
     position: absolute;
-    height: auto;
-    width: 17.5%;
-    bottom: 5%;
+    bottom: 10%;
     left: 5%;
-    transition: filter 250ms linear;
+    transition: 250ms linear;
+    border-color: black;
+    background-color: white;
+    border-radius: 999px;
+    box-sizing: border-box;
+    color: black;
+    cursor: pointer;
+    font-size: 3vw;
+    line-height: 24px;
+    opacity: 1;
+    outline: 0 solid transparent;
+    padding: 8px 18px;
+    word-break: break-word;
+    border-style: solid;
+    font-family:'Fira Sans';
+    text-decoration: none;
+    filter: drop-shadow(0 5px);
+    transition: 250ms;
 }
-.content #download_button_apple:hover {
-    filter: brightness(75%);
-    transition: filter 250ms linear;
+.content #shih_zoo_download_button:hover {
+    transition: 250ms linear;
+    transform: translate(0px, 5px);
+    filter: drop-shadow(0 0);
 }
 .content #les_dudes_coming_soon {
     position: absolute;
