--- a/home.css
+++ b/home.css
@@ -41,6 +41,11 @@ body {
     width: 15%;
     right: 2.5%;
     top: 2.5%;
+    transition: 250ms linear;
+}
+.content #shameless_product_placement_logo:hover {
+    transition: 250ms linear;
+    filter: brightness(75%);
 }
 .content #home_text {
     color: white;
@@ -63,7 +68,7 @@ body {
 }
 .content #down_arrow:hover {
     transition: 250ms linear;
-    filter: brightness(75%);
+    filter: brightness(50%);
 }
 .content .scrollable_area #story_title {
     color: white;
@@ -119,6 +124,9 @@ body {
     font-family: 'Fira Sans';
     color: white;
 }
+.content .scrollable_area .game_section {
+    padding-bottom: 40%;
+}
 .content .scrollable_area .game_section .games_header {
     display: grid;
     grid-template-columns: 68% 30%;
@@ -173,8 +181,7 @@ body {
 }
 .content .scrollable_area .game_section .games_buttons:hover {
     transition: 250ms linear;
-    border-color: gray;
-    color: gray;
+    filter: brightness(50%);
 }
 .content .scrollable_area .game_section .games_logos {
     width: 100%;
